# sked

.ipynb_checkpoints/: Untitled3-checkpoint.ipynb  test-checkpoint.py
131ps2/: Untitled.ipynb  data0.csv  ps2131.py  sjf.ipynb  sjf.py
131ps2/.ipynb_checkpoints/: data1-checkpoint.csv
archive/: sked.py  xsked.py
experiments/: formatme.py  test3.py  test5.py  test6.py  test7.py
sjf/: Huiyu_Huang.csv  ben_lambright.csv  chenchun_hu.csv  data0.csv  data1.csv  data1.test-csv  data3.csv  debbie.csv  evankaleti.csv  feifanhe.csv  han_bing.csv  ireneguo.csv  isadorehaviland.csv  jesse_levinson.csv  loggerdemo.py  sjf.ipynb  sjf.py  sonya_kleper.csv  tianling_hou.csv  xueyan_huang.csv  yichun_hunag.csv  yixuan_he.csv
sked_package/: README.md  pyproject.toml
sked_package/data/: aiprompt.txt  toy_default.json  toy_fcfs.json  toy_hw.json  toy_rr.json  toy_sj1.json  toy_sj2.json  toy_sj3.json  toy_sjf.json  toy_sjf_table.json
sked_package/src/sked_pitosalas/: clock.py  pcb.py  queue.py  scheduler.py  simulation.py  sked.py  tui.py
sked_package/src/sked_pitosalas.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
zjf/: data0.csv  sjf.py
zjf/.ipynb_checkpoints/: sjf-checkpoint.ipynb
